schema/testdata/validation_set_attribute_lhs_is_invalid/schema.keel
model Post {
    fields {
        name Text?
        published Boolean?
        identity Identity?
    }

    actions {
        create unknownIdentifier() with (name, published) {
            @set(name = "hello")
        }
        create namedInput() with (n: Text, published) {
            @set(n = post.name)
        }
        create literal() with (name, published) {
            @set("hello" = post.name)
        }
        create null() with (name, published) {
            @set(null = post.name)
        }
        create ctx() with (name, published) {
            @set(ctx.isAuthenticated = post.published)
        }
        create ctxIdentity() with (name, published) {
            @set(ctx.identity = post.identity)
        }
        create ctxIdentityEmail() with (name, published) {
            @set(ctx.identity.email = "email")
        }
        create anotherModel() {
            @set(publisher.name = "email")
        }
    }
}

model Publisher {
    fields {
        name Text
    }
}